--- a/sqi-home/src/Components/Accessories/SideBar.css
+++ b/sqi-home/src/Components/Accessories/SideBar.css
@@ -1,4 +1,25 @@
 .parentDiv{
     position: fixed;
     bottom: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.divOne, .divTwo{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+.divOne{
+    background-color: rgb(58, 87, 154);
+}
+
+.divTwo{
+    background-color: rgb(0, 171, 240);
 }
